--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ http://www.tooplate.com/view/2080-minimax
 			</div>
 			<div class="col-md-3 col-sm-6">
 				<img src="images/team2.jpg" class="img-responsive" alt="team img">
-				<h3>Michael</h3>
+				<h3>Sam</h3>
 				<h4>CEO / Cc-founder</h4>
 			</div>
 			<div class="col-md-3 col-sm-6">
