--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ http://www.tooplate.com/view/2080-minimax
 				<span class="icon icon-bar"></span>
 				<span class="icon icon-bar"></span>
 			</button>
-			<a href="#home" class="navbar-brand smoothScroll">Minimax</a>
+			<a href="#home" class="navbar-brand smoothScroll">MyAppsAustralia</a>
 		</div>
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav navbar-right">
@@ -148,7 +148,7 @@ http://www.tooplate.com/view/2080-minimax
 			</div>
 			<div class="col-md-3 col-sm-6">
 				<img src="images/team2.jpg" class="img-responsive" alt="team img">
-				<h3>Sam</h3>
+				<h3>Michael</h3>
 				<h4>CEO / Cc-founder</h4>
 			</div>
 			<div class="col-md-3 col-sm-6">
