--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ http://www.tooplate.com/view/2080-minimax
 				<span class="icon icon-bar"></span>
 				<span class="icon icon-bar"></span>
 			</button>
-			<a href="#home" class="navbar-brand smoothScroll">Minimax</a>
+			<a href="#home" class="navbar-brand smoothScroll">MyAppsAustralia</a>
 		</div>
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav navbar-right">
