--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@ https://templatemo.com/tm-570-chain-app-dev
               <div class="left-content show-up header-text wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
                 <div class="row">
                   <div class="col-lg-12">
-                    <h2>Get The Latest App From App Stores</h2>
-                    <p>Chain App Dev is an app landing page HTML5 template based on Bootstrap v5.1.3 CSS layout provided by TemplateMo, a great website to download free CSS templates.</p>
+                    <h2>MICROSOFT 365 & <br>POWER PLATFORM</h2>
+                    <p>Use the power of the Microsoft Cloud to grow your business with an affordable, scalable, and integrated application platform.</p>
                   </div>
                   <div class="col-lg-12">
                     <div class="white-button first-button scroll-to-section">
@@ -206,7 +206,9 @@ https://templatemo.com/tm-570-chain-app-dev
           <div class="section-heading  wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.5s">
             <h4>Amazing <em>Services &amp; Features</em> for you</h4>
             <img src="assets/images/heading-line-dec.png" alt="">
-            <p>If you need the greatest collection of HTML templates for your business, please visit <a rel="nofollow" href="https://www.toocss.com/" target="_blank">TooCSS</a> Blog. If you need to have a contact form PHP script, go to <a href="https://templatemo.com/contact" target="_parent">our contact page</a> for more information.</p>
+            <p>Open a world of possibilities and grow your business with an integrated application platform comprising of Power Apps, Power BI, and Power Automate.
+Through our team of talented and experienced engineers and consultants, we help businesses automate business processes using the Power Platform’s configurable workflow capabilities and extensible customizations. With dashboards, reporting, analytics and artificial intelligence, use the power of the Microsoft Cloud to embrace a new way of working.
+</p>
           </div>
         </div>
       </div>
@@ -700,9 +702,9 @@ https://templatemo.com/tm-570-chain-app-dev
           <div class="footer-widget">
             <h4>About Our Company</h4>
             <div class="logo">
-              <img src="assets/images/MyAppsAustraliaLogoName.png" alt="">
+              <img src="assets/images/MyAppsAustraliaLogoNameWhiteV1.png" alt="">
             </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+            <p>MyAppsAustralia is an application development business based in Melbourne, Australia specializing in the Microsoft Power Platform. We have a team of IT professionals with over 20 years of experience in helping businesses solve problems.</p>
           </div>
         </div>
         <div class="col-lg-12">
