--- a/index.html
+++ b/index.html
@@ -206,9 +206,8 @@ https://templatemo.com/tm-570-chain-app-dev
           <div class="section-heading  wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.5s">
             <h4>Amazing <em>Services &amp; Features</em> for you</h4>
             <img src="assets/images/heading-line-dec.png" alt="">
-            <p>Open a world of possibilities and grow your business with an integrated application platform comprising of Power Apps, Power BI, and Power Automate.
-Through our team of talented and experienced engineers and consultants, we help businesses automate business processes using the Power Platform’s configurable workflow capabilities and extensible customizations. With dashboards, reporting, analytics and artificial intelligence, use the power of the Microsoft Cloud to embrace a new way of working.
-</p>
+            <p>Open a world of possibilities and grow your business with an integrated application platform comprising of Power Apps, Power BI, and Power Automate.</p>
+<p>Through our team of talented and experienced engineers and consultants, we help businesses automate business processes using the Power Platform’s configurable workflow capabilities and extensible customizations. With dashboards, reporting, analytics and artificial intelligence, use the power of the Microsoft Cloud to embrace a new way of working.</p>
           </div>
         </div>
       </div>
