--- a/index.html
+++ b/index.html
@@ -217,41 +217,49 @@ https://templatemo.com/tm-570-chain-app-dev
         <div class="col-lg-3">
           <div class="service-item first-service">
             <div class="icon"></div>
-            <h4>App Maintenance</h4>
-            <p>You are not allowed to redistribute this template ZIP file on any other website.</p>
-            <div class="text-button">
+            <h4>Power Apps</h4>
+            <p>We create apps that can run on your computer, tablet or mobile built on enterprise grade Microsoft infrastructure. Solutions can connect to and surface data from your business applications, including Office 365 and third-party apps.</p>
+            <!--
+			  <div class="text-button">
               <a href="#">Read More <i class="fa fa-arrow-right"></i></a>
             </div>
+			-->
           </div>
         </div>
         <div class="col-lg-3">
           <div class="service-item second-service">
             <div class="icon"></div>
-            <h4>Rocket Speed of App</h4>
-            <p>You are allowed to use the Chain App Dev HTML template. Feel free to modify or edit this layout.</p>
+            <h4>Power Automate</h4>
+            <p>We can show you how to save time, reduce human error and streamline your processes by using Power Automate to create automated workflows. Make use of substantial productivity gains through automation of time-consuming and repetitive processes like approvals, alerts, data compilation and report creation. Set up triggers, automated emails, push notifications and much more.</p>
+			<!--
             <div class="text-button">
               <a href="#">Read More <i class="fa fa-arrow-right"></i></a>
             </div>
+			-->
           </div>
         </div>
         <div class="col-lg-3">
           <div class="service-item third-service">
             <div class="icon"></div>
-            <h4>Multi Workflow Idea</h4>
-            <p>If this template is beneficial for your work, please support us <a rel="nofollow" href="https://paypal.me/templatemo" target="_blank">a little via PayPal</a>. Thank you.</p>
+            <h4>Power BI</h4>
+            <p>Turn business data into insights and make strategic business decisions that increase productivity, improve revenue, and enhance growth by using a business intelligence solution created with Power BI. By using powerful visuals such as dashboards, charts, maps and much more, easily analyse and make sense of complex data to enable better decision making and continuous improvement of your business.</p>
+			<!--
             <div class="text-button">
               <a href="#">Read More <i class="fa fa-arrow-right"></i></a>
             </div>
+			-->
           </div>
         </div>
         <div class="col-lg-3">
           <div class="service-item fourth-service">
             <div class="icon"></div>
-            <h4>24/7 Help &amp; Support</h4>
-            <p>Lorem ipsum dolor consectetur adipiscing elit sedder williamsburg photo booth quinoa and fashion axe.</p>
+            <h4>Power Virtual Agents</h4>
+            <p>We create powerful chatbots you could use to provide self-service assistance to your teams while reducing helpdesk request.</p>
+			<!--
             <div class="text-button">
               <a href="#">Read More <i class="fa fa-arrow-right"></i></a>
             </div>
+			-->
           </div>
         </div>
       </div>
