--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ https://templatemo.com/tm-570-chain-app-dev
           <div class="section-heading">
             <h4>About <em>What We Do</em> &amp; Who We Are</h4>
             <img src="assets/images/heading-line-dec.png" alt="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eismod tempor incididunt ut labore et dolore magna.</p>
+            <p>MyAppsAustralia is an application development business based in Melbourne, Australia specializing in the Microsoft Power Platform. We have a team of IT professionals with over 20 years of experience in helping businesses solve problems.</p>
           </div>
           <div class="row">
             <div class="col-lg-6">
