--- a/index.html
+++ b/index.html
@@ -574,63 +574,47 @@ https://templatemo.com/tm-570-chain-app-dev
           </div>
         </div>
         <div class="col-lg-4">
-          <div class="pricing-item-regular">
-            <span class="price">$12</span>
-            <h4>Standard Plan App</h4>
+          <div class="pricing-item-pro">
+            <!--<span class="price">$12</span> -->
+            <h4>Highly Skilled</h4>
             <div class="icon">
               <img src="assets/images/pricing-table-01.png" alt="">
             </div>
             <ul>
-              <li>Lorem Ipsum Dolores</li>
-              <li>20 TB of Storage</li>
-              <li class="non-function">Life-time Support</li>
-              <li class="non-function">Premium Add-Ons</li>
-              <li class="non-function">Fastest Network</li>
-              <li class="non-function">More Options</li>
+              <li>We have a team of IT professionals with over 20 years of experience in helping businesses solve problems.</li>
             </ul>
-            <div class="border-button">
+            <!--<div class="border-button">
               <a href="#">Purchase This Plan Now</a>
-            </div>
+            </div>-->
           </div>
         </div>
         <div class="col-lg-4">
           <div class="pricing-item-pro">
-            <span class="price">$25</span>
-            <h4>Business Plan App</h4>
+            <!--<span class="price">$25</span> -->
+            <h4>Customised</h4>
             <div class="icon">
               <img src="assets/images/pricing-table-01.png" alt="">
             </div>
             <ul>
-              <li>Lorem Ipsum Dolores</li>
-              <li>50 TB of Storage</li>
-              <li>Life-time Support</li>
-              <li>Premium Add-Ons</li>
-              <li class="non-function">Fastest Network</li>
-              <li class="non-function">More Options</li>
+              <li>We will build the best customised solutions that meets the needs of your business.</li>
+
             </ul>
-            <div class="border-button">
-              <a href="#">Purchase This Plan Now</a>
-            </div>
+
           </div>
         </div>
         <div class="col-lg-4">
-          <div class="pricing-item-regular">
-            <span class="price">$66</span>
-            <h4>Premium Plan App</h4>
+          <div class="pricing-item-pro">  <!-- pricing-item-regular -->
+            <!--<span class="price">$66</span> -->
+			  <h4>Delivered In Weeks, <br>Not Months</h4>
             <div class="icon">
               <img src="assets/images/pricing-table-01.png" alt="">
             </div>
+			  
             <ul>
-              <li>Lorem Ipsum Dolores</li>
-              <li>120 TB of Storage</li>
-              <li>Life-time Support</li>
-              <li>Premium Add-Ons</li>
-              <li>Fastest Network</li>
-              <li>More Options</li>
+              <li>We use rapid prototyping and an agile approach to deliver solutions specific to your needs within weeks, not months.</li>
+
             </ul>
-            <div class="border-button">
-              <a href="#">Purchase This Plan Now</a>
-            </div>
+
           </div>
         </div>
       </div>
