--- a/index.html
+++ b/index.html
@@ -310,6 +310,7 @@
     </div>
   </div>
 
+	<!--
   <div id="clients" class="the-clients">
     <div class="container">
       <div class="row">
@@ -554,7 +555,7 @@
       </div>
     </div>
   </div>
-
+-->
   <div id="pricing" class="pricing-tables">
     <div class="container">
       <div class="row">
@@ -569,9 +570,9 @@
           <div class="pricing-item-pro">
             <!--<span class="price">$12</span> -->
             <h4>Highly Skilled</h4>
-            <div class="icon">
+            <!--<div class="icon">
               <img src="assets/images/pricing-table-01.png" alt="">
-            </div>
+            </div>-->
             <ul>
               <li>We have a team of IT professionals with over 20 years of experience in helping businesses solve problems.</li>
             </ul>
@@ -584,9 +585,9 @@
           <div class="pricing-item-pro">
             <!--<span class="price">$25</span> -->
             <h4>Customised</h4>
-            <div class="icon">
+            <!--<div class="icon">
               <img src="assets/images/pricing-table-01.png" alt="">
-            </div>
+            </div>-->
             <ul>
               <li>We will build the best customised solutions that meets the needs of your business.</li>
 
@@ -598,9 +599,9 @@
           <div class="pricing-item-pro">  <!-- pricing-item-regular -->
             <!--<span class="price">$66</span> -->
 			  <h4>Delivered In Weeks, <br>Not Months</h4>
-            <div class="icon">
+            <!--<div class="icon">
               <img src="assets/images/pricing-table-01.png" alt="">
-            </div>
+            </div>-->
 			  
             <ul>
               <li>We use rapid prototyping and an agile approach to deliver solutions specific to your needs within weeks, not months.</li>
