--- a/index.html
+++ b/index.html
@@ -619,10 +619,21 @@
       <div class="row">
         <div class="col-lg-8 offset-lg-2">
           <div class="section-heading">
-            <h4>Join our mailing list to receive the news &amp; latest trends</h4>
+            <h4>Let’s Get Started</h4>
           </div>
         </div>
         <div class="col-lg-6 offset-lg-3">
+			
+			<ol>
+             	<li>Book your free consultation.<br>
+					Call us on 03 9762 4016 or email to schedule a free consultation.</li>
+				<li>Tell us your business needs.
+					<br>We will work with you to understand your requirements and leverage the capabilities of the Power Platform to design the best customised solution for your business.</li>
+				<li>Let us show you how to get the most out of your investment!
+					<br>The Power Platform is deployed in your own Microsoft Cloud environment, saving you time and money. We use rapid prototyping and an agile approach to deliver solutions specific to your needs within weeks, not months.</li>
+            </ol>
+			
+			<!--
           <form id="search" action="#" method="GET">
             <div class="row">
               <div class="col-lg-6 col-sm-6">
@@ -637,6 +648,10 @@
               </div>
             </div>
           </form>
+-->
+			
+			
+			
         </div>
       </div>
       <div class="row">
