--- a/index.html
+++ b/index.html
@@ -622,15 +622,14 @@
             <h4>Let’s Get Started</h4>
           </div>
         </div>
-        <div class="col-lg-6 offset-lg-3">
-			
+        <div class="col-lg-6 offset-lg-3">			
 			<ol>
-             	<li>Book your free consultation.<br>
-					Call us on 03 9762 4016 or email to schedule a free consultation.</li>
-				<li>Tell us your business needs.
-					<br>We will work with you to understand your requirements and leverage the capabilities of the Power Platform to design the best customised solution for your business.</li>
-				<li>Let us show you how to get the most out of your investment!
-					<br>The Power Platform is deployed in your own Microsoft Cloud environment, saving you time and money. We use rapid prototyping and an agile approach to deliver solutions specific to your needs within weeks, not months.</li>
+             	<li><b>Book your free consultation.</b><br>
+					Call us on 03 9762 4016 or email to schedule a free consultation.</li><br>
+				<li><b>Tell us your business needs.</b><br>
+					We will work with you to understand your requirements and leverage the capabilities of the Power Platform to design the best customised solution for your business.</li><br>
+				<li><b>Let us show you how to get the most out of your investment!</b><br>
+					The Power Platform is deployed in your own Microsoft Cloud environment, saving you time and money. We use rapid prototyping and an agile approach to deliver solutions specific to your needs within weeks, not months.</li><br><br>
             </ol>
 			
 			<!--
@@ -648,8 +647,7 @@
               </div>
             </div>
           </form>
--->
-			
+-->			
 			
 			
         </div>
@@ -658,9 +656,8 @@
         <div class="col-lg-3">
           <div class="footer-widget">
             <h4>Contact Us</h4>
-            <p>Rio de Janeiro - RJ, 22795-008, Brazil</p>
-            <p><a href="#">010-020-0340</a></p>
-            <p><a href="#">info@company.co</a></p>
+            <p><a href="#">Phone 03 9762 4016</a></p>
+            <p><a href="#">Email: info@myappsaustralia.com.au</a></p>
           </div>
         </div>
         <div class="col-lg-3">
