--- a/index.html
+++ b/index.html
@@ -656,8 +656,8 @@
         <div class="col-lg-3">
           <div class="footer-widget">
             <h4>Contact Us</h4>
-            <p><a href="#">Phone 03 9762 4016</a></p>
-            <p><a href="#">Email: info@myappsaustralia.com.au</a></p>
+            <p>Phone: <a href="tel:0397624016">03 9762 4016</a></p>
+            <p>Email: <a href="mailto:info@myappsaustralia.com.au">info@myappsaustralia.com.au</a></p>
           </div>
         </div>
         <div class="col-lg-3">
