--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <li class="scroll-to-section"><a href="#services">Services</a></li>
               <li class="scroll-to-section"><a href="#about">About</a></li>
               <li class="scroll-to-section"><a href="#pricing">Pricing</a></li>
-              <li class="scroll-to-section"><a href="#newsletter">Newsletter</a></li>
+              <li class="scroll-to-section"><a href="#contactus">Contact Us</a></li>
               <li><div class="gradient-button"><a id="modal_trigger" href="#modal"><i class="fa fa-sign-in-alt"></i> Sign In Now</a></div></li> 
             </ul>        
             <a class="menu-trigger">
@@ -171,10 +171,10 @@
                   </div>
                   <div class="col-lg-12">
                     <div class="white-button first-button scroll-to-section">
-                      <a href="#contact">Free Quote <i class="fab fa-apple"></i></a>
+                      <a href="#contactus">Free Quote <i class="fab fa-apple"></i></a>
                     </div>
                     <div class="white-button scroll-to-section">
-                      <a href="#contact">Free Quote <i class="fab fa-google-play"></i></a>
+                      <a href="#contactus">Free Quote <i class="fab fa-microsoft"></i></a>
                     </div>
                   </div>
                 </div>
@@ -292,6 +292,7 @@
                 <p>Lorem Ipsum Text</p>
               </div>
             </div>
+			<!--
             <div class="col-lg-12">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eismod tempor idunte ut labore et dolore adipiscing  magna.</p>
               <div class="gradient-button">
@@ -299,6 +300,7 @@
               </div>
               <span>*No Credit Card Required</span>
             </div>
+			-->
           </div>
         </div>
         <div class="col-lg-6">
@@ -614,7 +616,7 @@
     </div>
   </div> 
 
-  <footer id="newsletter">
+  <footer id="contactus">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 offset-lg-2">
@@ -625,7 +627,7 @@
         <div class="col-lg-6 offset-lg-3">			
 			<ol>
              	<li><b>Book your free consultation.</b><br>
-					Call us on 03 9762 4016 or email to schedule a free consultation.</li><br>
+					Call us on <a href="tel:0397624016">03 9762 4016</a> or <a href="mailto:info@myappsaustralia.com.au">Email</a> to schedule a free consultation.</li><br>
 				<li><b>Tell us your business needs.</b><br>
 					We will work with you to understand your requirements and leverage the capabilities of the Power Platform to design the best customised solution for your business.</li><br>
 				<li><b>Let us show you how to get the most out of your investment!</b><br>
