--- a/index.html
+++ b/index.html
@@ -166,13 +166,13 @@
               <div class="left-content show-up header-text wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
                 <div class="row">
                   <div class="col-lg-12">
-                    <h2>MICROSOFT 365 & <br>POWER PLATFORM</h2>
+                    <h2>MICROSOFT 365 &amp;&nbsp; <br>POWER PLATFORM</h2>
                     <p>Use the power of the Microsoft Cloud to grow your business with an affordable, scalable, and integrated application platform.</p>
                   </div>
                   <div class="col-lg-12">
-                    <div class="white-button first-button scroll-to-section">
+                    <!--<div class="white-button first-button scroll-to-section">
                       <a href="#contactus">Free Quote <i class="fab fa-apple"></i></a>
-                    </div>
+                    </div>-->
                     <div class="white-button scroll-to-section">
                       <a href="#contactus">Free Quote <i class="fab fa-microsoft"></i></a>
                     </div>
