--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                       <a href="#contactus">Free Quote <i class="fab fa-apple"></i></a>
                     </div>-->
                     <div class="white-button scroll-to-section">
-                      <a href="#contactus">Free Quote <i class="fab fa-microsoft"></i></a>
+                      <a href="#contactus">Free Quote <i class="fab fa-microsoft"></i><i class="fab fa-apple"></i><i class='fab fa-google-play'></i></a>
                     </div>
                   </div>
                 </div>
@@ -270,26 +270,26 @@
           <div class="row">
             <div class="col-lg-6">
               <div class="box-item">
-                <h4><a href="#">Maintance Problems</a></h4>
-                <p>Lorem Ipsum Text</p>
+                <h4><a href="#">Based in Melbourne</a></h4>
+                <p>Our Team is based in Melbourne&nbsp;&nbsp;</p>
               </div>
             </div>
             <div class="col-lg-6">
               <div class="box-item">
-                <h4><a href="#">24/7 Support &amp; Help</a></h4>
-                <p>Lorem Ipsum Text</p>
+                <h4><a href="#">&nbsp;</a></h4>
+                <p>&nbsp;</p>
               </div>
             </div>
             <div class="col-lg-6">
               <div class="box-item">
-                <h4><a href="#">Fixing Issues About</a></h4>
-                <p>Lorem Ipsum Text</p>
+                <h4><a href="#">&nbsp;</a></h4>
+                <p>&nbsp;</p>
               </div>
             </div>
             <div class="col-lg-6">
               <div class="box-item">
-                <h4><a href="#">Co. Development</a></h4>
-                <p>Lorem Ipsum Text</p>
+                <h4><a href="#">&nbsp;</a></h4>
+                <p>&nbsp;</p>
               </div>
             </div>
 			<!--
